# workshop-estruturando-projeto-dados-do-zero

./: README.md  pyproject.toml
app/: main.py
app/pipeline/: extract.py  load.py
tests/: test_pipeline.py
